igrp-process-studio-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: igrp-process-studio-frontend-service
  namespace: igrp-process-studio-frontend
  labels:
    app: igrp-process-studio-frontend
spec:
  selector:
    app: igrp-process-studio-frontend
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3000
  type: ClusterIP
