igrp-process-studio-frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igrp-process-studio-frontend-ingress
  namespace: igrp-process-studio-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: igrp-process-studio-frontend.zingdevelopers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igrp-process-studio-frontend-service
                port:
                  number: 80
          # New path with basePath
          - path: /apps/igrp-process-studio(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: igrp-process-runtime-frontend-service
                port:
                  number: 80
